--- a/UI in Code/Info.plist
+++ b/UI in Code/Info.plist
@@ -39,5 +39,15 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>New item</key>
+			<string>http://www.tsetmc.com/</string>
+		</dict>
+	</dict>
 </dict>
 </plist>
